--- a/env/OPENSHIFT_SCALEDB_INSTALL_DIR.erb
+++ b/env/OPENSHIFT_SCALEDB_INSTALL_DIR.erb
@@ -1,1 +1,1 @@
-<%= ENV['OPENSHIFT_MARIADB_DIR'] %>/michael44/michael44/scaledb-0.2.5/
+<%= ENV['OPENSHIFT_MARIADB_DIR'] %>/michael44/scaledb-0.2.5/
